--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,30 +1,36 @@
 {
   "manifest_version": 3,
-  "name": "Chrome Extension with React & Webpack",
-  "description": "A chrome extension boilerplate built with React 17, Webpack 5, and Webpack Dev Server 4",
-  "options_page": "options.html",
-  "background": { "service_worker": "background.bundle.js" },
+  "name": "Luminai Browser Extension",
+  "description": "Luminai Browser Extension for stonks",
+  "permissions": [
+    "tabs",
+    "storage"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
-  },
-  "chrome_url_overrides": {
-    "newtab": "newtab.html"
   },
   "icons": {
     "128": "icon-128.png"
   },
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://*/*", "<all_urls>"],
-      "js": ["contentScript.bundle.js"],
-      "css": ["content.styles.css"]
+      "match_about_blank": true,
+      "matches": [
+        "<all_urls>"
+      ],
+      "match_origin_as_fallback": true,
+      "js": [
+        "contentScript.bundle.js"
+      ]
     }
   ],
-  "devtools_page": "devtools.html",
   "web_accessible_resources": [
     {
-      "resources": ["content.styles.css", "icon-128.png", "icon-34.png"],
+      "resources": [
+        "icon-128.png",
+        "icon-34.png"
+      ],
       "matches": []
     }
   ]
